1st version of front-end added
