# service/api/getPhoto.go
@@ -5,7 +5,8 @@ import (
 	"net/http"
 	"os"
 	"path/filepath"
-	"strconv"
+	// "strconv"
+	"io"
 
 	"github.com/Rsen337/WASA-project-WASAPhoto-/service/api/reqcontext"
 	"github.com/Rsen337/WASA-project-WASAPhoto-/service/database"
@@ -28,7 +29,7 @@ func (rt *_router) getPhoto(w http.ResponseWriter, r *http.Request, ps httproute
 	if err != nil {
 		// The requested photo doesn't exist.
 		w.WriteHeader(http.StatusNoContent)
-		ctx.Logger.WithError(err).Error("getPhoto: GetPhotoDetails returns an error")
+		ctx.Logger.WithError(err).Error("getPhoto: GetPhoto returns an error")
 		return
 	}
 
@@ -44,25 +45,34 @@ func (rt *_router) getPhoto(w http.ResponseWriter, r *http.Request, ps httproute
 	defer file.Close()
 
 	// Get the file information
-	fileInfo, err := file.Stat()
+	// fileInfo, err := file.Stat()
+	// if err != nil {
+	// 	writeResponse(w, http.StatusInternalServerError, "")
+	// 	ctx.Logger.WithError(err).Error("getPhoto: Failed to get file information")
+	// 	return
+	// }
+
+	_, err = io.Copy(w, file)
 	if err != nil {
 		writeResponse(w, http.StatusInternalServerError, "")
-		ctx.Logger.WithError(err).Error("getPhoto: Failed to get file information")
+		ctx.Logger.WithError(err).Error("getPhoto: Failed to copy file content")
 		return
 	}
 
-	// Set the response headers
-	w.Header().Set("Content-Type", "image/jpeg")
-	w.Header().Set("Content-Length", strconv.FormatInt(fileInfo.Size(), 10))
 
-	// Serve the file content
-	http.ServeContent(w, r, photoId, fileInfo.ModTime(), file)
+	// // Set the response headers
+	// w.Header().Set("Content-Type", "image/jpeg")
+	// w.Header().Set("Content-Length", strconv.FormatInt(fileInfo.Size(), 10))
+
+	// // Serve the file content
+	// http.ServeContent(w, r, photoId, fileInfo.ModTime(), file)
 }
 
 // getPhotoDetails retrieves details of a specific photo searched by the photoId.
 func (rt *_router) getPhotoDetails(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 	// Check if the request is authorized.
-	valid := rt.isAuthorized(getToken(r.Header.Get("Authorization")), getToken(r.Header.Get("Authorization")))
+	reqId := getToken(r.Header.Get("Authorization"))
+	valid := rt.isAuthorized(reqId, reqId)
 	if valid != 0 {
 		ctx.Logger.Info("getPhotoDetails: Unauthorized request")
 		writeResponse(w, valid, "")
@@ -86,10 +96,24 @@ func (rt *_router) getPhotoDetails(w http.ResponseWriter, r *http.Request, ps ht
 		return
 	}
 
-	comments, err := rt.db.GetPhotoComments(photoId, 1)
+	commentsAmount, err := rt.db.GetPhotoCommentsCount(photoId)
 	if err != nil {
 		writeResponse(w, http.StatusInternalServerError, "")
-		ctx.Logger.WithError(err).Error("getPhotoDetails: GetPhotoComments returns an error")
+		ctx.Logger.WithError(err).Error("GetPhotoCommentsCount: GetPhotoComments returns an error")
+		return
+	}
+
+	isLiked, err := rt.db.IsLiked(photoId, reqId)
+	if err != nil {
+		writeResponse(w, http.StatusInternalServerError, "")
+		ctx.Logger.WithError(err).Error("IsLiked returns an error")
+		return
+	}
+
+	username, err := rt.db.GetUsername(userId)
+	if err != nil {
+		writeResponse(w, http.StatusInternalServerError, "")
+		ctx.Logger.WithError(err).Error("GetUsername returns an error")
 		return
 	}
 
@@ -98,9 +122,11 @@ func (rt *_router) getPhotoDetails(w http.ResponseWriter, r *http.Request, ps ht
 	photo := database.Photo{
 		PhotoID:     photoId,
 		UserID:      userId,
+		Username:    username,
 		Timestamp:   timestamp,
 		LikesAmount: likesAmount,
-		Comments:    comments,
+		CommentsAmount:    commentsAmount,
+		IsLiked:     isLiked,
 	}
 	err = json.NewEncoder(w).Encode(photo)
 	if err != nil {
